--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>HelloJQ</title>
+    <title>Battleship</title>
     <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script src='application.js'></script>
